GNOME Bugzilla – Bug 782047
region: don't leak container
Last modified: 2017-05-02 10:57:03 UTC
.
Created attachment 350843 [details] [review] region: don't leak container The returned result of g_variant_get_strv has to be freed when no-longer needed
Review of attachment 350843 [details] [review]: You should add that explanation to the commit message in bug 782048. But same problem as this bug for the commit subject.
Created attachment 350859 [details] [review] region: Fix memory leak The returned result of g_variant_get_strv has to be freed when no-longer needed
Review of attachment 350859 [details] [review]: > g_variant_get_strv g_variant_get_strv() Otherwise looks great!
Attachment 350859 [details] pushed as aebf04f - region: Fix memory leak