region: Fix memory leak

The returned result of g_variant_get_strv() has to be freed
when no-longer needed

https://bugzilla.gnome.org/show_bug.cgi?id=782047